<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.BagFragment">

    <data>
        <variable
            name="BagViewModel"
            type="com.example.myfoodorder.viewmodels.BagViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_bottom"
            app:list_food_in_bag="@{BagViewModel.restaurantsWithFoods}"
            app:calculate_price="@{tvTotalPrice}">
        </androidx.recyclerview.widget.RecyclerView>


        <androidx.cardview.widget.CardView
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="15dp"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="10dp"
                     >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/subtotal_str"
                         android:textSize="16sp"
                         android:layout_weight="1"
                         android:fontFamily="@font/svn_gilroy_semi_bold"/>
                     <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0_vnd_str"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:gravity="right"
                            android:fontFamily="@font/svn_gilroy_semi_bold"
                         tools:ignore="RtlHardcoded" />
                 </LinearLayout>

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="10dp"
                     >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/delivery_str"
                         android:textSize="16sp"
                         android:layout_weight="1"
                         android:fontFamily="@font/svn_gilroy_semi_bold"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/_0_vnd_str"
                         android:layout_weight="1"
                         android:textSize="16sp"
                         android:gravity="right"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         tools:ignore="RtlHardcoded" />
                 </LinearLayout>

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="15dp"
                     >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/total_str"
                         android:textSize="16sp"
                         android:layout_weight="1"
                         android:fontFamily="@font/svn_gilroy_bold"/>
                     <TextView
                         android:id="@+id/tv_total_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{BagViewModel.strPrice}"
                         android:layout_weight="1"
                         android:textSize="16sp"
                         android:gravity="right"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         tools:ignore="RtlHardcoded" />
                 </LinearLayout>

                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:background="@drawable/yellow_background"
                     android:fontFamily="@font/svn_gilroy_semi_bold"
                     android:text="@string/check_out_str"
                     android:onClick="@{() -> BagViewModel.onClickCheckOut()}"
                     android:textAllCaps="false"
                     android:textSize="16sp"
                     tools:ignore="VisualLintButtonSize" />

             </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</layout>