<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".views.activities.EditProfileActivity">

    <data>
        <variable
            name="EditProfileViewModel"
            type="com.example.myfoodorder.viewmodels.EditProfileViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/svn_gilroy_semi_bold"
                android:text="@string/Edit_profile_str"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck,TextSizeCheck,TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Save_str"
                android:gravity="center"
                android:fontFamily="@font/svn_gilroy_semi_bold"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="20dp"
                android:onClick="@{() -> EditProfileViewModel.onClickButtonSave()}"
                tools:ignore="RelativeOverlap,RtlSymmetry">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0.1dp"
                app:cardBackgroundColor="@color/transparent_white"
                android:layout_centerVertical="true"
                android:onClick="@{() -> EditProfileViewModel.onClickButtonBack()}"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="auto"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_back_arrow"
                    android:scaleX="0.4"
                    android:scaleY="0.4"
                    tools:ignore="ContentDescription">
                </ImageView>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_toolbar"
            android:orientation="vertical"
            android:layout_marginTop="5dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/layout_image"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:src="@drawable/banana_lickety_split"
                        app:user_photo="@{EditProfileViewModel.imageUrl}">
                    </de.hdodenhof.circleimageview.CircleImageView>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/transparent_white"
                        android:fontFamily="@font/svn_gilroy_semi_bold"
                        android:onClick="@{() -> EditProfileViewModel.onClickChangeImage()}"
                        android:text="Edit image"
                        android:textAllCaps="false"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Name_str"
                        android:fontFamily="@font/svn_gilroy_semi_bold"
                        android:textSize="15sp"
                        android:layout_weight="2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/svn_gilroy_semi_bold"
                        android:hint="@{EditProfileViewModel.hintName}"
                        android:text="@={EditProfileViewModel.name}"
                        android:textSize="15sp"
                        tools:ignore="Autofill,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Phone_number_str"
                        android:fontFamily="@font/svn_gilroy_semi_bold"
                        android:textSize="15sp"
                        android:layout_weight="2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/svn_gilroy_semi_bold"
                        android:hint="@{EditProfileViewModel.hintPhone}"
                        android:inputType="number"
                        android:text="@={EditProfileViewModel.phone}"
                        android:textSize="15sp"
                        tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="@{() -> EditProfileViewModel.onChangingPassword()}">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Change_password_str"
                        android:fontFamily="@font/svn_gilroy_semi_bold"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>


</layout>